added basic validation utils
