# src/api/error.rs
@@ -2,6 +2,7 @@ use failure::{Backtrace, Context, Fail};
 use services::ErrorKind as ServiceErrorKind;
 use std::fmt;
 use std::fmt::Display;
+use validator::ValidationErrors;
 
 #[derive(Debug)]
 pub struct Error {
@@ -9,12 +10,14 @@ pub struct Error {
 }
 
 #[allow(dead_code)]
-#[derive(Copy, Clone, Eq, PartialEq, Debug, Fail)]
+#[derive(Clone, Debug, Fail)]
 pub enum ErrorKind {
     #[fail(display = "controller error - unauthorized")]
     Unauthorized,
     #[fail(display = "controller error - bad request")]
     BadRequest,
+    #[fail(display = "controller error - unprocessable entity")]
+    UnprocessableEntity(ValidationErrors),
     #[fail(display = "controller error - internal error")]
     Internal,
 }
@@ -42,7 +45,7 @@ pub enum ErrorContext {
 #[allow(dead_code)]
 impl Error {
     pub fn kind(&self) -> ErrorKind {
-        *self.inner.get_context()
+        self.inner.get_context().clone()
     }
 }
 
@@ -80,8 +83,7 @@ impl From<ServiceErrorKind> for ErrorKind {
             ServiceErrorKind::Internal => ErrorKind::Internal,
             ServiceErrorKind::Unauthorized => ErrorKind::Unauthorized,
             ServiceErrorKind::MalformedInput => ErrorKind::BadRequest,
-            // Todo - update to 3XX
-            ServiceErrorKind::InvalidInput => ErrorKind::BadRequest,
+            ServiceErrorKind::InvalidInput(validation_errors) => ErrorKind::UnprocessableEntity(validation_errors),
         }
     }
 }
